--- a/.circleci/config/jobs/trigger-test-ui.yml
+++ b/.circleci/config/jobs/trigger-test-ui.yml
@@ -6,7 +6,7 @@ steps:
   - attach_workspace:
       at: .
   - run:
-      name: export PATH
+      name: Export PATH & Run UI Tests
       command: |
         # Add ./bin to the PATH so vault binary can be run by Ember tests
         set -x
@@ -17,6 +17,6 @@ steps:
         mkdir -p test-results/qunit
         yarn test:oss
   - store_test_results:
-      path: /tmp/test-reports
+      path: ui/test-results
   - store_artifacts:
-      path: /tmp/test-reports
+      path: ui/test-results
