--- a/.circleci/config/workflows/ci.yml
+++ b/.circleci/config/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
         # Only main, UI, release and merge branches need to run UI tests.
         # We don't filter here however because test-ui is configured in github as
         # required so it must run, instead we short-circuit within test-ui.
-  - trigger-test-ui:
-      # manually triggered by adding github action (ignorant of branch naming)
+  - triggered-test-ui:
+      # runs when manually triggered by adding github label 'trigger-ui-tests' (ignorant of branch naming)
       requires:
         - install-ui-dependencies
         - build-go-dev
